--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,18 +3,18 @@
   "name": "Money Manager",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "https://avatars1.githubusercontent.com/u/31583525?s=400&u=622f7cf1808094522745d9f7ef6f62005e06e24b&v=4",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/jpg"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
+      "src": "https://avatars1.githubusercontent.com/u/31583525?s=400&u=622f7cf1808094522745d9f7ef6f62005e06e24b&v=4",
+      "type": "image/jpg",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
-      "type": "image/png",
+      "src": "https://avatars1.githubusercontent.com/u/31583525?s=400&u=622f7cf1808094522745d9f7ef6f62005e06e24b&v=4",
+      "type": "image/jpg",
       "sizes": "512x512"
     }
   ],
